fixed problem with errors
