# springboot-server/src/main/java/org/openapitools/api/RunApi.java
@@ -5,6 +5,8 @@
  */
 package org.openapitools.api;
 
+import org.openapitools.model.InternalServerError;
+import org.openapitools.model.InvalidInputError;
 import org.openapitools.model.RunConfig;
 import io.swagger.v3.oas.annotations.ExternalDocumentation;
 import io.swagger.v3.oas.annotations.Operation;
@@ -32,7 +34,7 @@ import java.util.Map;
 import java.util.Optional;
 import javax.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-06-30T20:12:45.563455115-05:00[America/Chicago]", comments = "Generator version: 7.6.0")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-06-30T20:36:08.461319642-05:00[America/Chicago]", comments = "Generator version: 7.6.0")
 @Validated
 @Tag(name = "run", description = "the run API")
 public interface RunApi {
@@ -47,6 +49,7 @@ public interface RunApi {
      * @param runConfig  (required)
      * @return A JSON array of user names (status code 200)
      *         or Bad Request - The request was invalid or cannot be served. (status code 400)
+     *         or Internal Server Error - An unexpected error occurred. (status code 500)
      */
     @Operation(
         operationId = "runPost",
@@ -55,7 +58,12 @@ public interface RunApi {
             @ApiResponse(responseCode = "200", description = "A JSON array of user names", content = {
                 @Content(mediaType = "application/json", schema = @Schema(implementation = RunConfig.class))
             }),
-            @ApiResponse(responseCode = "400", description = "Bad Request - The request was invalid or cannot be served.")
+            @ApiResponse(responseCode = "400", description = "Bad Request - The request was invalid or cannot be served.", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = InvalidInputError.class))
+            }),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error - An unexpected error occurred.", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = InternalServerError.class))
+            })
         }
     )
     @RequestMapping(
@@ -72,6 +80,16 @@ public interface RunApi {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
                     String exampleString = "{ \"degreeProgram\" : \"degreeProgram\", \"genEdProgram\" : \"genEdProgram\", \"courseConfig\" : [ { \"courses\" : [ \"courses\", \"courses\" ], \"numCourses\" : 0 }, { \"courses\" : [ \"courses\", \"courses\" ], \"numCourses\" : 0 } ] }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"message\" : \"message\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"message\" : \"message\" }";
                     ApiUtil.setExampleResponse(request, "application/json", exampleString);
                     break;
                 }
